# compilingTheory

./: .babelrc  .gitignore  CMakeLists.txt  README.md  example.txt  main.c  package-lock.json  package.json  reg-test.txt
datastructure/: CMakeLists.txt  bool.h  data_struct_utils.c  data_struct_utils.h  lex_stack.c  lex_stack.h  memory_management.c  memory_management.h  my-iterator.c  my-iterator.h  my_ArrayList.c  my_ArrayList.h  my_iterator.c  my_iterator.h  my_map.c  my_map.h  my_set.c  my_set.h  my_str.c  my_str.h  rb_tree.c  rb_tree.h  stack.c  stack.h  trie.c  trie.h
dfaAnalyzer/: CMakeLists.txt  dfa_Intepretor.c  dfa_Intepretor.h  dfa_group.c  dfa_group.h  dfa_interface.h  dfa_minimize.c  dfa_minimize.h  dfa_parse.c  dfa_parse.h  dfa_utils.c  dfa_utils.h
grammarParser/: CMakeLists.txt
grammarParser/CompilerParseTableBuild/: CMakeLists.txt  my_symbol.c  my_symbol.h  parse_table_builder.c  symbol_define.c  symbol_define.h
grammarParser/CompilerPdaAttribute/: CMakeLists.txt  attributed_parser.c  attributed_parser.h  my_symbol.c  my_symbol.h  parse_table_builder.c  parse_table_builder.h  symbol_define.h
grammarParser/LR1parse/: CMakeLists.txt  LR1FirstSetBuilder.c  LR1FirstSetBuilder.h  LR1GrammarState.c  LR1GrammarStateManager.c  LR1GrammarStateManager.h  LR1compiler.c  LR1compiler.h  LR1production.c  LR1production.h  LR1productionManager.c  LR1productionManager.h
grammarParser/LRparse/: CMakeLists.txt  LRGrammarState.c  LRGrammarStateManager.c  LRGrammarStateManager.h  LRcompiler.c  LRcompiler.h  LRproduction.c  LRproduction.h  LRproductionManager.c  LRproductionManager.h
grammarParser/PDACompiler/: CMakeLists.txt  Lexer.c  Lexer.h  pda_parse.c  pda_parse.h
grammarParser/PushDownDFA/: CMakeLists.txt  push_down_DFA.c  push_down_DFA.h
lexicalAnalyzer/: CMakeLists.txt  bool.h  lexical.c  lexical.h  main.c  nfa_Intepretor.c  nfa_Intepretor.h  nfa_Interface.h  optr_utils.c  optr_utils.h  reg-test.txt  regstruct.h  set_utils.c  set_utils.h  setutils.c  stack.c  stack.h  stns_utils.c  stns_utils.h  trie.c  trie.h  utils.c  utils.h
nfaAnalyzer/: CMakeLists.txt  nfa_Intepretor.c  nfa_Intepretor.h  nfa_Interface.h  nfa_parse.c  nfa_parse.h  optr_utils.c  optr_utils.h  set_utils.c  stns_utils.c  stns_utils.h  utils.c  utils.h
readfile/: CMakeLists.txt  read_file.c  read_file.h  read_str.c  read_str.h
web_src/: app.vue  index.html  main.js  utils.js
web_src/components/: graphviz.vue  inputReg.vue  matchReg.vue
web_src/example/: reg1.txt
web_src/server/: c_bind.js
webpack_setup/: webpack.config.js
